--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -88,7 +88,10 @@
 		}
 		#navigation {
 			margin-top: 20px;
-			padding-bottom: 50px;
+			margin-bottom: 20px;
+		}
+		#navigation .navbar-inner {
+			float: none;
 		}
 		.open > .dropdown-menu {
 			box-shadow: 0px 13px 19px -11px rgb(51, 51, 51) !important;
@@ -194,12 +197,18 @@
 		.dockbar-split .dockbar .navbar-inner .nav #_145_loginDropdown > .dropdown-menu .portlet button[type="submit"] {
 			border: 1px solid #666 !important;
 		}
-		.footer, a#_145_navSiteNavigationNavbarBtn {
+		.footer {
 			background-color: #474B4C !important;
 			color: #fff !important;
 		}
 		#_145_navSiteNavigationNavbarBtn {
-			margin-right: 20px !important;
+			margin-right: 50px !important;
+			top: 50px !important;
+			background-color: rgba(255, 255, 255, 0.9) !important;
+			border-radius: 0 0 2px 2px;
+			color: #474B4C !important;
+			position: fixed !important;
+			z-index: 999999;
 		}
 		#_145_searchDropdown > .dropdown-menu {
 			margin-left: -361px !important;
