--- a/triton-theme/src/main/webapp/templates/portal_normal.vm
+++ b/triton-theme/src/main/webapp/templates/portal_normal.vm
@@ -107,7 +107,6 @@ $theme.include($body_top_include)
         });
     });
 </script>
-
 <script>
     $(function() {
         var box = $('.white .navbar-header'); // float-fixed block
@@ -121,6 +120,21 @@ $theme.include($body_top_include)
             } else {
                 box.css('position', 'fixed');
                 box.css('top', 0);
+            }
+        });
+    });
+</script>
+<script>
+    $(function() {
+        var box = $('.white #_145_navSiteNavigationNavbarBtn, #navigation.site-navigation.open'); // float-fixed block
+
+        var top = box.offset().top - parseFloat(box.css('marginTop').replace(/auto/, 0));
+        $(window).scroll(function(){
+            var windowpos = $(window).scrollTop();
+            if(windowpos < top) {
+                box.css('position', 'absolute');
+            } else {
+                box.css('position', 'fixed');
             }
         });
     });
