--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1634,7 +1634,7 @@ p {
 			font-size: 12px;
 		}
 		#_145_navSiteNavigationNavbarBtn {
-			top: 88px !important;
+			top: 88px;
 		}
 		#_145_navAddControlsNavbarCollapse {
 			display: none !important;
@@ -2448,12 +2448,12 @@ p {
 	.aui {
 		#_145_navSiteNavigationNavbarBtn {
 			display: block !important;
-			position: absolute !important;
-			top: 84px !important;
+			position: absolute;
+			top: 84px;
 			right: 0 !important;
 			background: #0066A1;
 			border: 0;
-			margin: 0;
+			margin: 0 !important;
 			padding: 7px 14px !important;
 			&.open {
 				background: #F5AF45;
