--- a/triton-theme/src/main/webapp/templates/navigation.vm
+++ b/triton-theme/src/main/webapp/templates/navigation.vm
@@ -1,3 +1,4 @@
+#if ($nav_items.size() > 0)
 <nav class="$nav_css_class navbar site-navigation" id="navigation" role="navigation">
 	<div class="navbar-inner">
 		<div class="collapse nav-collapse">
@@ -49,6 +50,7 @@
 		</div>
 	</div>
 </nav>
+#end
 
 <script>
 	Liferay.Data.NAV_LIST_SELECTOR = '.navbar-inner .nav-collapse > ul';
