--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -204,9 +204,8 @@
 		}
 		#_145_navSiteNavigationNavbarBtn {
 			margin-right: 50px !important;
-			top: 50px;
+			top: 70px !important;
 			background-color: rgba(255, 255, 255, 0.9) !important;
-			border-radius: 0 0 2px 2px;
 			color: #474B4C !important;
 			z-index: 99;
 		}
