--- a/triton-theme/src/main/webapp/css/color_schemes/white.css
+++ b/triton-theme/src/main/webapp/css/color_schemes/white.css
@@ -65,7 +65,7 @@
 			background-size: 100% 100%;
 		}
 		.navbar > .container > #navbar {
-			min-height: auto !important;
+			min-height: 0 !important;
 		}
 		.navbar-header {
 			width: 100px;
@@ -97,9 +97,8 @@
 			box-shadow: 0px 13px 19px -11px rgb(51, 51, 51) !important;
 		}
 		.site-navigation.open {
-			top: 30px;
-			right: 68px;
-            position: fixed !important;
+			top: 20px;
+			right: 72px;
 		}
 		#navigation .navbar-inner ul.nav-collapse li a,
 		.dockbar .navbar-inner .nav #_145_loginDropdown > .dropdown-menu .portlet label,
@@ -233,24 +232,24 @@
 			}
 		}
 	}
-    @media (max-width: 1023px) {
-        .white .carousel-title, .white .carousel-text {
-            margin-left: 0 !important;
-        }
-    }
-    @media (max-width: 767px) {
-        body.white {
-            margin-bottom: 77px !important;
-        }
-    }
-    @media (max-width: 639px) {
-        body.white {
-            margin-bottom: 57px !important;
-        }
-        .white #_145_searchDropdown > .dropdown-menu {
-            margin-left: -121px !important;
-        }
-    }
+	@media (max-width: 1023px) {
+		.white .carousel-title, .white .carousel-text {
+			margin-left: 0 !important;
+		}
+	}
+	@media (max-width: 767px) {
+		body.white {
+			margin-bottom: 77px !important;
+		}
+	}
+	@media (max-width: 639px) {
+		body.white {
+			margin-bottom: 57px !important;
+		}
+		.white #_145_searchDropdown > .dropdown-menu {
+			margin-left: -121px !important;
+		}
+	}
 	@media (max-width: 479px) {
 		.white {
 			#_145_searchDropdown {
